2011-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* TAG AND RELEASE VERSION 4.4.4

2011-11-07  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/lua.trm term/lua/gnuplot-lua.tikz: lua_ident is not available
	in LUA 5.1.

	* term/gd.trm: Backport windows compilation changes from 4.5.

	* config/makefile.mgw: Fix errors related to shell scripts. Backport
	from 4.5.

2011-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (make_palette):  Fix segfault caused by initializing a 
	terminal with an "infinite" color palette (colors == 0) when previous 
	terminal had merely a large color palette (e.g. WIN_PAL_COLORS 4096).
	Bug #3429772

2011-10-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Write <title>gnuplot</title> at top of output.

2011-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c: Decrease linewidth used by pdfcairo
	terminal for pattern fill.  This works around what seems to be a pdf
	bug in libcairo versions through at least 1.10.

2011-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stdfn.c (not_a_number):  Possible fix for failure of NaN tests
	when build using mingw.

2011-09-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c src/graph3d.c src/graphics.c:  User-specified axis tick
	labels should override auto-generated tick labels in 3D plots just as
	they already do in 2D plots.

	* src/plot2d.c: In `plot with labels`, skip labels for which the x,y
	coordinates are UNDEFINED.
	Bug #3415454

2011-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes):  "with image" from a
	function may not make sense, but at least it should not segfault.
	Bug #3406642

2011-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Yet another rewrite of the installation path rules for
	TeX files.  Remove obsolete status messages.

2011-08-31  Ethan A Merritt  <merritt@u.washington.edu>
